# feeds-aggregator

./: .gitignore  README.md  action.yml  main.go  pyproject.toml  renovate.json
.github/workflows/: feeds-aggregator.yml
data/: feeds.json  follow.opml  rss.opml  rss.txt
docs/: REQUIREMENTS.md
src/feeds_aggregator/: application.py  cli.py  failure_log.py  feed_parser.py  input_loader.py  models.py  output_writer.py  processing.py  reporting.py  runner.py
src/feeds_aggregator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_input_and_aggregation.py  test_output_and_reporting.py  test_processing.py
