[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feeds-aggregator"
version = "0.1.0"
description = "Aggregate feed sources into a unified result"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "zhijunio" }]
dependencies = [
    "pillow>=10.0.0",
]

[project.scripts]
feeds-aggregator = "feeds_aggregator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
